--- a/app/components/transaction-list/new/template.hbs
+++ b/app/components/transaction-list/new/template.hbs
@@ -1,2 +1,5 @@
 New transaction
+{{#each flashMessages.queue as |flash|}}
+  {{flash-message flash=flash}}
+{{/each}}
 {{input placeholder="Enter amount" value=amountValue enter=(action "newTransaction")}}
