--- a/app/components/transaction-list/show/template.hbs
+++ b/app/components/transaction-list/show/template.hbs
@@ -1,5 +1,6 @@
 Showing model is: {{transaction.id}}
 <ul>
-  <li>{{input value=transaction.amount enter=(action "saveTransaction")}}</li>
+  <li>{{input value=transaction.amount}}</li>
   <li>{{transaction.createdAt}}</li>
+  <button {{action "saveTransaction"}}>Submit</button>
 </ul>
