--- a/app/components/transaction-list/template.hbs
+++ b/app/components/transaction-list/template.hbs
@@ -1,6 +1,10 @@
+{{#each flashMessages.queue as |flash|}}
+  {{flash-message flash=flash}}
+{{/each}}
+
 {{#each transactions as |transaction|}}
  {{#link-to 'transactions.transaction' transaction.id}}
-  {{transaction.amount}}
+  {{format-currency transaction.amount}}
  {{/link-to}}
   <button {{action "removeTransaction" transaction}}>Delete</button>
 {{else}}
