--- a/app/components/transaction-list/new/template.hbs
+++ b/app/components/transaction-list/new/template.hbs
@@ -1,3 +1,3 @@
 New transaction
-{{input placeholder="Enter amount" value=amountValue}}
+{{input type="number" placeholder="Enter amount" value=amountValue}}
 <button {{action 'newTransaction'}}>Create</button>
