--- a/app/components/transaction-list/new/template.hbs
+++ b/app/components/transaction-list/new/template.hbs
@@ -1,3 +1,5 @@
-New transaction
-{{input type="number" placeholder="Enter amount" value=amountValue}}
-<button {{action 'newTransaction'}}>Create</button>
+<h2>New transaction</h2>
+<p>
+  {{input type="number" placeholder="Enter amount" value=amountValue}}
+  <button {{action 'newTransaction'}}>Create</button>
+</p>
