--- a/app/components/transaction-list/show/template.hbs
+++ b/app/components/transaction-list/show/template.hbs
@@ -1,4 +1,4 @@
-Showing model is: {{transaction.id}}
+<h2>Showing model is: {{transaction.id}}</h2>
 <ul>
   <li>{{input type="number" value=transaction.amount}}</li>
   <li>{{transaction.createdAt}}</li>
