--- a/app/templates/transactions/transaction.hbs
+++ b/app/templates/transactions/transaction.hbs
@@ -1,2 +1,2 @@
 {{transaction-list/show transaction=model}}
-{{#link-to 'transactions'}}Back{{/link-to}}
+{{#paper-button href=(href-to "transactions") class="href-to"}}Back{{/paper-button}}
