--- a/app/templates/transactions/new.hbs
+++ b/app/templates/transactions/new.hbs
@@ -1,2 +1,2 @@
 {{transaction-list/new}}
-{{#link-to 'transactions'}}Back{{/link-to}}
+{{#paper-button href=(href-to "transactions") class="href-to"}}Back{{/paper-button}}
